--- a/posts/psy/script_psy_nb_jp_multiple_reunion_same_ipp/index.qmd
+++ b/posts/psy/script_psy_nb_jp_multiple_reunion_same_ipp/index.qmd
@@ -7,7 +7,9 @@ page-layout: full
 
 ## Introduction  
 
-Pour chaque configuration (ipp,date_acte), on calcule le nombre d'acte de Réunion, puis on ne retient que les configurations avec au moins 2 actes de Réunion.  
+Pour chaque configuration (ipp,date_acte), on calcule le nombre d'acte de Réunion, puis on ne retient que les configurations avec au moins 2 actes de Réunion réalisés le même jour pour le même patient.  
+
+Voir le contrôle Qualité OVALIDE "[1.Q.11.RIPP] : Nombre de journées avec plusieurs actes de réunions pour un même IPP" que l'on améliore ici en produisant la variable `sum_same_ipp_date_acte_nature_acte_R` qui est le nombre d'actes de Réunion.  
 
 ## Code  
 
@@ -15,20 +17,24 @@ Pour chaque configuration (ipp,date_acte), on calcule le nombre d'acte de Réuni
 #| label: code
 library(dplyr)
 
-same_ipp_date_acte <- psy$raa$raa %>% 
+same_ipp_date_acte <- psy_raa$raa %>% 
     dplyr::select(ipp,nature_acte,date_acte) %>% 
     dplyr::mutate(.by = c(ipp,date_acte,nature_acte),
                   sum_same_ipp_date_acte_nature_acte_R = sum(nature_acte == "R")) %>% 
     dplyr::filter(sum_same_ipp_date_acte_nature_acte_R >= 2L) %>% 
     dplyr::distinct()
 same_ipp_date_acte
+
+# le nombre de lignes same_ipp_date_acte
+nrow(same_ipp_date_acte)
 ```
 
 ## Commentaires  
 
-Voir le contrôle Qualité OVALIDE "[1.Q.11.RIPP] : Nombre de journées avec plusieurs actes de réunions pour un même IPP".  
-On améliore ici en produisant la variable `sum_same_ipp_date_acte_nature_acte_R` qui est le nombre d'actes de Réunion  
+Ligne 3 : `psy_raa$raa` est un tibble des variables RAA 
 
-PMSISoft PSY Standard : voir écran `Requêtes PSY > Requêtes RAA` et la requête `Plusieurs actes de réunions pour un même IPP et une même date [1.Q.11.RIPP]`  
+Ligne 6 : nature_acte == "R" produit une valeur logique qui est sommée par `sum()` sachant que TRUE == 1 et FALSE == 0  
+
+Cette requête est disponible par défaut dans l'écran `Requêtes PSY > Requêtes RAA` de [PMSISoft PSY](https://www.pmsisoft.com/acces_pmsisoft_psy){target="_blank"} sous le libellé `Plusieurs actes de réunions pour un même IPP et une même date [1.Q.11.RIPP]`  
 
 [Etre tenu au courant de la publication des nouveaux scripts PMSI R](http://www.lespmsi.com/scripts-pmsi-r/){target="_blank"}  
