--- a/posts/psy/script_psy_sejour_temps_complet_entree_sortie_same_sejour/index.qmd
+++ b/posts/psy/script_psy_sejour_temps_complet_entree_sortie_same_sejour/index.qmd
@@ -7,7 +7,7 @@ page-layout: full
 
 ## Introduction  
 
-On sélectionne l'activité RPS en temps complet, puis les RPS avec date_entree_sejour == date_sortie_sejour, puis on ne retient qu'une ligne par séjour.  
+On produit un tibble de séjours, puis on retient les séjours relevant d'une forme d'activité en temps complet, puis on retient les séjours pour lesquels date_entree_sejour == date_sortie_sejour.  
 
 ## Code  
 
@@ -15,20 +15,25 @@ On sélectionne l'activité RPS en temps complet, puis les RPS avec date_entree_
 #| label: code
 library(dplyr)
 
-sejour_selected <- psy$rps$rps %>% 
-    dplyr::select(no_sejour,ipp,forme_activite,nb_jours_presence,date_entree_sejour,date_sortie_sejour) %>% 
-    dplyr::filter(forme_activite %in% c('01','01D','01S','01P','02','03','04','05','06','07'),
-                  date_entree_sejour == date_sortie_sejour) %>% 
-    dplyr::distinct(no_sejour,ipp,date_entree_sejour,date_sortie_sejour)
+vect_fa_temps_complet <- c('01','01D','01S','01P','02','03','04','05','06','07')
+
+sejour_selected <- psy_rps$rps %>% 
+    dplyr::distinct(no_sejour,ipp,forme_activite,nb_jours_presence,date_entree_sejour,date_sortie_sejour) %>% 
+    dplyr::filter(forme_activite %in% vect_fa_temps_complet,
+                  date_entree_sejour == date_sortie_sejour)
 sejour_selected
 ```
 
 ## Commentaires  
 
-Ligne 5 : le vecteur `c('01','01D','01S','01P','02','03','04','05','06','07')` correspond aux formes d'activité temps complet  
+Ligne 3 : le vecteur `vect_fa_temps_complet` correspond aux codes des formes d'activité temps complet  
 
-Ligne 7 : on ne sélectionne que des variables liées à un séjour  
+Ligne 5 : `psy_rps$rps` est un tibble des variables de la partie fixe d'un fichier RPS  
 
-PMSISoft PSY Professionnel : écran `Séjours > Base des séjours`, filtrage de périmètre `Forme d'activité == codes temps_complet` et filtrage de variable `nb_jp_sejour Egal à 0`  
+Ligne 6 : on ne sélectionne que des variables liées à un séjour via un `dplyr::distinct()` qui sélectionne et dédoublonne en même temps  
+
+Ligne 8 : en l'absence de date_sortie_sejour (donc quand date_sortie_sejour a la valeur NA), le `dplyr::fitler()` ne retient pas la ligne. Les séjours dans date de sortie ne sont donc pas retenus.  
+
+Cette requête peut être réalisée dans [PMSISoft PSY](https://www.pmsisoft.com/acces_pmsisoft_psy){target="_blank"} dans l'écran `Séjours > Base des séjours` via le filtrage de périmètre `Forme d'activité == codes temps_complet` et le filtrage de variable `nb_jp_sejour Egal à 0`  
 
 [Etre tenu au courant de la publication des nouveaux scripts PMSI R](http://www.lespmsi.com/scripts-pmsi-r/){target="_blank"}  
